<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_edit_user"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="30sp"
        android:fontFamily="@font/title_font_jetbrains_nl_bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/peek_user_info"
        android:id="@+id/peekCurrentUserButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/editCredentialsButton"
        android:text="@string/edit_credentials_open"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/editPhotoThemesButton"
        android:text="@string/edit_photo_and_themes_open"
        />

</LinearLayout>