<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".ui.slider.SliderFinalFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setup_done"
            android:fontFamily="@font/title_font_jetbrains_nl_bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/done_instructions"
            android:paddingBottom="50dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:layout_gravity="center_horizontal"
            android:id="@+id/botonFinalizar"
            android:layout_marginBottom="70dp"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/circulitoRegister"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/done_note"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_red_dark"
            />
    </LinearLayout>
</ScrollView>
