<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slider.SeleccionarPFPFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:id="@+id/anhade"
            android:fontFamily="@font/title_font_jetbrains_nl_bold"
            android:textSize="20sp"
            android:text="@string/select_pfp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            />

        <ImageButton
            android:id="@+id/seleccionaImagen"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/select_pfp"
            android:scaleType="fitXY"
            android:src="@drawable/retiocus_main_pfp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_pfp_not_selected"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetPfp"
            android:layout_gravity="center_horizontal"
            android:text="@string/restore_default_pfp"
            />
    </LinearLayout>
</ScrollView>
